<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_market">Market</string>
    <string name="pref_currency">Preferred Currency</string>
    <string name="pref_currency_summary">This is the default currency type</string>
    <string name="coinimage">coin image</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="retry">Retry</string>
    <string name="no_results">No Results</string>
    <string name="coin">Coin</string>
    <string name="market_cap">Market Cap</string>
    <string name="currentprice">Current Price</string>
    <string name="_24h">24H</string>
    <string name="trading_volume">TRADING VOLUME</string>
    <string name="_24h_high">24H HIGH</string>
    <string name="fully_diluted_valuation">FULLY DILUTED VALUATION</string>
    <string name="_7d">7D</string>
    <string name="_2w">2W</string>
    <string name="_1m">1M</string>
    <string name="_2m">2M</string>
    <string name="_200d">200D</string>
    <string name="market_cap_rank">MARKET CAP RANK</string>
    <string name="market_total_cap">MARKET CAP</string>
    <string name="_24h_low">24H LOW</string>
    <string name="available_supply">AVAILABLE SUPPLY</string>
    <string name="total_supply">TOTAL SUPPLY</string>
    <string name="all_time_high">ALL TIME HIGH</string>
    <string name="all_time_hight_on">ALL TIME HIGHT ON</string>
    <string name="all_time_low">ALL TIME LOW</string>
    <string name="all_time_low_on">ALL TIME LOW ON</string>
    <string name="todo">TODO</string>
    <string name="homepage">HomePage</string>
    <string name="na">NA</string>
    <string name="official_forum">Official Forum</string>
    <string name="blockchain">Blockchain</string>
    <string name="others">Others</string>
    <string name="about">About</string>
    <string name="favourites">Favourites</string>
    <string name="market">Market</string>
    <string name="more">More</string>
    <string name="pref_order">Default Order By</string>
    <string name="pref_def_start_screen">Default Start Screen</string>
    <string name="pref_per_change_dur">Default Percentage Change Duration</string>
    <string name="repos">Repositories</string>
    <string name="volume">Volume</string>
    <string name="active_cryptocurrencies">Active Cryptocurrencies</string>
    <string name="upcoming_icos">Upcoming ICOs</string>
    <string name="ongoing_icos">Ongoing ICOs</string>
    <string name="ended_icos">Ended ICOs</string>
    <string name="markets">Markets</string>
    <string name="exchanges">Exchanges</string>
    <string name="Cryptocurrencies">Cryptocurrencies</string>
    <string name="global">Global</string>
    <string name="defi_market_cap">Defi Market Cap</string>
    <string name="ethereum_market_cap">Ethereum Market Cap</string>
    <string name="defi_eth">Defi : Eth</string>
    <string name="defi_dominance">Defi Dominance</string>
    <string name="top_coin">Top Coin</string>
    <string name="dominance">Dominance</string>
    <string name="trending_today">Trending Today</string>
    <string name="app_logo">App logo</string>
    <string name="add_to_fav">Add to favourite</string>
    <string name="github_profile_avatar">github profile avatar</string>
    <string name="share">Share</string>
    <string name="commits_">Commits :-</string>
    <string name="app_tagline">A Cryptocurrency app for Android</string>
    <string name="contributing">Contributing</string>
    <string name="view_on_github">View on Github</string>
    <string name="sync_with_server">Sync with Server</string>
    <string name="contribution_text">Got some ideas or suggestions? feel free to contribute :) The more is done the better it gets!</string>
    <string name="percent">%</string>
    <string name="error">Error</string>
    <string name="search">Search</string>
    <string name="general">General</string>
    <string name="pref_theme">Theme</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="key_internet_error">No Connection</string>
    <string name="key_error">Error</string>
    <string name="error_image">Error Image</string>
    <string name="key_server_error">Server Error</string>
    <string name="app_ui_crash">UI Crash</string>
    <string name="error_unable_to_load_graph">Unable to load graph</string>
    <string name="general_error">Error</string>
    <string name="error_snackbar_action">Report</string>
    <string name="error_snackbar_message">Sorry, something went wrong.</string>
    <string name="remove_favourite">Remove favourite</string>
    <string name="first_time_setup_text">Hold on setting up Kripto for the first time!</string>
    <string name="notification_channel_id">Kripto sync service notification</string>
    <string name="sync_notification_title">Crunching latest data!</string>
    <string name="cancel_sync">Cancel</string>
    <string name="sync_notification_channel">Sync</string>
    <string name="sync_notification_channel_desc">Get notified when getting latest data!</string>
    <string name="cancelled_sync_curse">Cancel hi krna tha toh sync kra hi kyu #apshabd</string>
    <string name="cancelled_sync_ftsa_curse">\"Why would u do that!? Fuk u :/\"</string>
    <string name="enter_value">Enter Value</string>
    <string name="empty_favourites_msg">\"Found None, Add Some?\"</string>
    <string name="exchangeplatformlogo">ExchangePlatformLogo</string>
    <string name="news">News</string>
    <string name="flip_table">(╯°□°)╯︵ ┻━┻</string>
    <string name="pull_down_to_refresh">Pull down to refresh</string>
    <string name="project_image">Project Image</string>
    <string name="partnership">Partnership</string>
    <string name="milestone">Milestone</string>
    <string name="exchange_listing">Exchange Listing</string>
    <string name="software_release">Software Release</string>
    <string name="fund_movement">Fund Movement</string>
    <string name="new_listings">New Listings</string>
    <string name="event">Event</string>
    <string name="exchange_rates">Exchange Rates</string>
    <string name="no_search_results_msg">Is that what u looking for!!?</string>
    <string name="set_targets">Set Targets</string>
    <string name="price_alert_user_tip">Specify one of the values or define a range</string>
    <string name="more_than">More than:</string>
    <string name="less_than">Less than:</string>
    <string name="save">Save</string>
    <string name="price_alert_notification">Price Alert Notifications</string>
    <string name="price_alert_notification_channel_desc">Get notified when the price alerts are triggered</string>
    <string name="price_alert_notification_channel_id">PriceAlertNotification</string>
    <string name="alert">Alert</string>
    <string name="once">Once</string>
    <string name="always">Always</string>
    <string name="add_price_alert">Add price alert</string>
    <string name="about_kripto">About Kripto</string>
    <string name="contributors">Contributors</string>
    <string name="empty_coin_id_name">This should not have happened, curse developers!</string>
    <string name="defi">Defi</string>
    <string name="kripto_settings">Kripto Settings</string>
    <string name="all">All</string>
    <string name="currency">Currency</string>
    <string name="show_all">Show All</string>
    <string name="enabled">Enabled</string>
    <string name="visit_website">Visit Website</string>
    <string name="view_more">View More</string>
    <string name="reddit_logo">Reddit logo</string>
    <string name="twitter_logo">Twitter Logo</string>
    <string name="price_chart">Price Chart</string>

</resources>