<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.presentation.PriceAlertActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextLessThan"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/outline"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextMoreThan"
        app:layout_constraintStart_toStartOf="@+id/editTextMoreThan"
        app:layout_constraintTop_toBottomOf="@+id/editTextMoreThan" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:labelFor="@id/editTextLessThan"
        android:text="@string/less_than"
        app:layout_constraintBottom_toBottomOf="@+id/editTextLessThan"
        app:layout_constraintEnd_toStartOf="@+id/editTextLessThan"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView28"
        app:layout_constraintTop_toTopOf="@+id/editTextLessThan" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/set_targets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dd_currency"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/currency"
        android:textColorHint="?attr/colorSecondary"
        app:endIconTint="?attr/colorSecondary"
        app:hintTextAppearance="@style/TextAppearance.App.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/tv_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:textAllCaps="true"
            android:textColor="?attr/colorSecondary"
            tools:ignore="KeyboardInaccessibleWidget" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:labelFor="@id/tv_current_price"
        android:text="@string/currentprice"
        app:layout_constraintStart_toStartOf="@+id/dd_currency"
        app:layout_constraintTop_toBottomOf="@+id/dd_currency" />

    <TextView
        android:id="@+id/tv_current_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/dd_currency"
        app:layout_constraintStart_toEndOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/dd_currency"
        tools:text="31873612387613" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/price_alert_user_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_price" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/editTextMoreThan"
        android:text="@string/more_than"
        app:layout_constraintBottom_toBottomOf="@+id/editTextMoreThan"
        app:layout_constraintStart_toStartOf="@+id/textView27"
        app:layout_constraintTop_toTopOf="@+id/editTextMoreThan" />

    <EditText
        android:id="@+id/editTextMoreThan"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/outline"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLessThan"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/rbgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checkedButton="@id/rb_once"
        android:orientation="horizontal"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/editTextLessThan"
        tools:visibility="gone">

        <RadioButton
            android:id="@+id/rb_once"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/once" />

        <RadioButton
            android:id="@+id/rb_always"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/always" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>